# sol-meme

./: .bashrc  .env.production  .eslintrc.js  Dockerfile  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json
.github/workflows/: comprehensive-ci-cd.yml
kubernetes/: deployment.yml
meme-coin-platform/: Anchor.toml  README.md  package.json  tsconfig.json
meme-coin-platform/app/: package.json
meme-coin-platform/app/src/components/: TokenLaunchForm.tsx  WalletConnectButton.tsx
meme-coin-platform/app/src/pages/: _app.tsx
meme-coin-platform/programs/launchpad/: Cargo.toml
meme-coin-platform/programs/launchpad/src/: lib.rs
meme-coin-platform/programs/tax-token/: Cargo.toml
meme-coin-platform/programs/tax-token/src/: lib.rs
meme-coin-platform/scripts/: dex-integration.js
scripts/: deploy.sh  deployment-error-handler.js
